--- a/css/main.css
+++ b/css/main.css
@@ -84,6 +84,7 @@ body {
   min-width: 320px;
   position: relative;
   overflow-x: hidden;
+  background: rgb(246, 253, 255);
 }
 
 body::-webkit-scrollbar {
@@ -121,6 +122,10 @@ a {
 
 a:hover {
   color: var(--accent);
+}
+
+.title {
+  font-size: 1.5rem;
 }
 
 /* HEADER */
@@ -222,6 +227,38 @@ a:hover {
 
 /* MAIN_CONTENT */
 
+.page__title {
+  background-color: #187dc7;
+  padding: 96px;
+  color: #fff;
+  text-align: center;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+}
+
+.page__title .overlay {
+  position: absolute;
+  content: '';
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(5, 5, 5, 0.25);
+  transition: all 0.25s ease;
+}
+
+.page__title .heading {
+  z-index: 99;
+  padding: 16px;
+  background-color: rgba(0, 0, 0, 0.5);
+  position: relative;
+}
+
+.page__title:hover .overlay {
+  background-color: rgba(5, 5, 5, 0);
+}
+
 .slider {
   margin: 32px 0;
 }
@@ -269,7 +306,6 @@ a:hover {
 
 .company__info-row {
   display: flex;
-  align-items: center;
   flex-wrap: wrap;
   justify-content: center;
 }
@@ -279,8 +315,8 @@ a:hover {
   overflow: hidden;
   background: #187dc7;
   border-radius: 8px;
-  margin: 0 16px 16px 16px;
-  width: calc(50% - 32px);
+  margin: 0 8px 16px 8px;
+  width: calc(50% - 16px);
 }
 
 .company__info-item.green {
@@ -312,15 +348,14 @@ a:hover {
 }
 
 .company__info-item .item__info-wrapper .item__title {
-  font-size: 1.5rem;
   line-height: 1.2;
   margin-bottom: 16px;
+  font-weight: bold;
 }
 
 /* PAGE_NEWS */
 
 .last-news__title {
-  font-size: 1.5em;
   margin-bottom: 16px;
   padding: 0 16px;
   font-weight: medium;
@@ -344,7 +379,7 @@ a:hover {
   overflow: hidden;
   min-width: 320px;
   width: auto;
-  height: 175px;
+  height: 200px;
 }
 
 .last-news__item-image .overlay {
@@ -391,18 +426,29 @@ a:hover {
   margin: 64px 0;
 }
 
+.meters__title {
+  margin-bottom: 16px;
+  padding: 0 16px;
+}
+
+.meters__img {
+  display: flex;
+  align-items: center;
+}
+
 .meters__block {
   display: flex;
   background-color: #187dc7;
   padding: 0 64px;
   justify-content: space-between;
   border-radius: 8px;
+  margin: 0 16px;
 }
 
 .meters__form {
   background-color: #18c73f;
   width: 100%;
-  margin-left: 32px;
+  margin-left: 64px;
   padding: 16px 16px;
   border-radius: 8px;
 }
@@ -426,4 +472,240 @@ a:hover {
   background-color: #fff;
   border-radius: 8px;
   padding: 4px 8px;
+}
+
+.add__field {
+  display: flex;
+  justify-content: end;
+  margin: 0 16px;
+  cursor: pointer;
+}
+
+.add__field .add__button {
+  outline: none;
+  border: none;
+  background-color: transparent;
+  width: 24px;
+  height: 24px;
+  border-radius: 8px;
+}
+
+.form__button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 16px;
+}
+
+.form__button .button {
+  border: none;
+  outline: none;
+  padding: 8px 12px;
+  background-color: #1c327a;
+  border-radius: 8px;
+  color: #fff;
+}
+
+.footer {
+  padding: 16px;
+  background-color: #1c327a;
+}
+
+/*TarifsPage*/
+
+.tarifs__table {
+  margin: 64px 0;
+}
+
+.table {
+  width: 100%;
+  border-spacing: 2px;
+  border-collapse: collapse;
+  font-size: 14px;
+  border-radius: 8px;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  -khtml-border-radius: 8px;
+  background-color: #fff;
+
+  overflow: hidden;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
+}
+
+.table tr {
+  width: auto;
+  border-bottom: 1px solid #f5f5f5;
+}
+
+.table .table__label {
+  width: 33%;
+  font-weight: 600;
+}
+
+.table .td {
+  padding: 8px 16px;
+}
+
+.table .table__title {
+  margin-bottom: 8px;
+}
+
+.table .row-name {
+  color: #1c327a;
+}
+
+.contacts__info {
+  margin: 32px 0;
+  display: flex;
+}
+
+.contacts__info .info__item {
+  box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.25);
+  border-radius: 8px;
+  margin: 0 8px 16px 8px;
+  padding: 24px 16px;
+  width: calc(50% - 16px);
+}
+
+.contacts__info .info__item .info__item-title {
+  font-size: 1.5rem;
+}
+
+.contacts__info .info__item .info__item-body .info__item-row {
+  display: flex;
+  margin-bottom: 8px;
+}
+
+.contacts__info .info__item .info__item-body .info__item-col {
+  flex: 1 0 50%;
+}
+
+.news__row {
+  display: flex;
+  margin: 32px 0;
+  flex-wrap: wrap;
+}
+
+.news__row .news__item {
+  width: calc(50% - 16px);
+  margin: 0 8px 16px 8px;
+  transition: all 0.25s ease;
+}
+
+.news__row .news__item:nth-child(3n) {
+  width: 100%;
+}
+
+.news__row .news__item-image {
+  position: relative;
+  border-radius: 8px;
+  overflow: hidden;
+  min-width: 320px;
+  width: auto;
+  height: 260px;
+}
+
+.news__row .news__item-image .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #000;
+  opacity: 0.5;
+  transition: all 0.25s ease;
+}
+
+.news__row .news__item-image .news__date {
+  position: absolute;
+  color: #fff;
+  top: 16px;
+  left: 0;
+  background: rgba(5, 5, 5, 0.7);
+  padding: 4px 8px;
+  z-index: 9;
+  border-radius: 0 8px 8px 0;
+}
+
+.news__row .news__item:hover .news__item-image .overlay {
+  opacity: 0.2;
+}
+
+.news__row .news__item-image img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+
+.news__row .news__item-description {
+  padding: 4px;
+  text-align: justify;
+}
+
+.current__news-block {
+  padding: 16px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
+  margin: 32px 0;
+}
+
+.current__news-block img {
+  display: block;
+  width: 100%;
+  height: 320px;
+  object-fit: cover;
+  border-radius: 4px;
+  object-position: center;
+}
+
+.current__news-block p {
+  text-align: justify;
+}
+
+.current__news-block .news__date {
+  display: flex;
+  width: 100%;
+  justify-content: flex-end;
+  color: #666;
+}
+
+.about__info-col {
+  margin: 32px 0;
+}
+
+.about__info table tbody {
+  width: 100%;
+}
+
+.about__info-row {
+  display: flex;
+  width: 100%;
+}
+
+.about__info-col {
+  flex: 1;
+}
+
+.about__info-col .info__body {
+  padding: 16px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
+}
+
+.about__info-col .table .table__label {
+  width: 40%;
+}
+
+.consumers__info {
+  margin: 32px 0;
+}
+
+.consumers__info .info__col-row {
+  padding: 16px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
 }
